@@ -521,6 +521,7 @@ const char* RFX_Type_Desc(const unsigned char i, const unsigned char snum)
 		{ pTypeSOLAR, "Solar", "solar" },
 		{ pTypeHunter, "Hunter", "Hunter" },
 		{ pTypeDDxxxx, "Blinds", "blinds" },
+		{ pTypeHoneywell_AL, "Honeywell", "doorbell" },
 		{ 0, nullptr, nullptr },
 	};
 	if (snum == 1)
@@ -945,6 +946,10 @@ const char* RFX_Type_SubType_Desc(const unsigned char dType, const unsigned char
 		{ pTypeGeneralSwitch, sSwitchTypeFaber, "Faber" },
 		{ pTypeGeneralSwitch, sSwitchTypeDrayton, "Drayton" },
 		{ pTypeGeneralSwitch, sSwitchTypeV2Phoenix, "V2Phoenix" },
+
+		{ pTypeHoneywell_AL, sTypeSeries5, "Honeywell Series 5" },
+		{ pTypeHoneywell_AL, sTypePIR, "Honeywell PIR" },
+
 		{ 0, 0, nullptr },
 	};
 	return findTableID1ID2(Table, dType, sType);
@@ -2254,6 +2259,9 @@ void GetLightStatus(
 			lstatus = "unknown/unsupported!";
 			break;
 		}
+		break;
+	case pTypeHoneywell_AL:
+		lstatus = "On";
 		break;
 	}
 
